all ok updated, overflow resolved

--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,8 @@ button:hover {
   border-bottom: 1px solid #aaa;
   border-radius: 3px;
   margin: 10px 10px;
+  /* box-sizing: border-box; */
+  overflow: hidden;
 }
 .row-img {
   width: 50px;
@@ -200,6 +202,8 @@ button:hover {
 }
 .smalldiv {
   max-width: 1.5px;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 .oper-button {
